--- a/SASS/main.scss
+++ b/SASS/main.scss
@@ -6,3 +6,5 @@
 @import "./components/subscribe_form";
 @import "./components/recover_form";
 @import "./base/buttons";
+@import "./base/checkbox";
+@import "./base/input";
