--- a/SASS/base/_general.scss
+++ b/SASS/base/_general.scss
@@ -3,6 +3,7 @@
   padding: 0;
 }
 body {
+  background-color: goldenrod;
   background-image: url(../../img/background2.png),
     url(../../img/background.png);
   background-repeat: no-repeat;
@@ -52,15 +53,6 @@ li {
   list-style: none;
   margin-bottom: 21px;
 }
-
-input {
-  width: 257px;
-  height: 39px;
-  margin-left: 23px;
-  margin-right: 19px;
-  padding-left: 81px;
-}
-
 .form__lable {
   position: relative;
 }
@@ -73,12 +65,6 @@ input {
   height: 22px;
   fill: $-primary-text-color;
 }
-input:focus ~ .form__icon {
-  fill: $-accent;
-}
-input:focus ~ .form__vertical-bar {
-  fill: $-accent;
-}
 .form__vertical-bar {
   position: absolute;
   content: "";
@@ -88,39 +74,8 @@ input:focus ~ .form__vertical-bar {
   height: 32px;
   fill: $-primary-text-color;
 }
-
-input:focus {
-  outline: $-accent solid 3px;
-}
-
 .form__acceptance {
   display: flex;
   flex-direction: row;
   align-items: center;
-}
-.form__checkbox--original {
-  display: none;
-}
-.form__checkbox {
-  display: inline-block;
-  width: 23px;
-  height: 24px;
-  border: 1px solid $-primary-text-color;
-  margin-left: 23px;
-  margin-right: 15px;
-  position: relative;
-}
-.form__checkbox::before {
-  position: absolute;
-  content: "";
-  width: 13px;
-  height: 13px;
-  background-color: $-accent;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  opacity: 0;
-}
-.form__checkbox--original:checked + .form__checkbox::before {
-  opacity: 1;
 }
